# zj-base

./: .clang-format  .cppcheck-suppressions  .cppcheck-suppressions.xml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Doxyfile  README.md  pre-commit-config.yaml  test.xml  version-history.md
.github/workflows/: c-cpp.yml  cpp-build.yml
client-project-example/: CMakeLists.txt  build-run-client-example.bash  main.cpp  zj-build-run-client-example.bash
cmake/in-files/: zj-base-config.cmake.in
examples/compile-definitions/: main.cpp
examples/inc-src-structure/: CMakeLists.txt  main.cpp
examples/inc-src-structure/inc/: foo.hpp
examples/inc-src-structure/src/: foo.cpp
examples/modularized/: CMakeLists.txt  main.cpp
examples/modularized/inc/: foo.hpp
examples/modularized/src/: foo.cpp
examples/sigint-sigsegv-handling/: CMakeLists.txt  main.cpp
examples/std-any/: main.cpp
examples/tester/: CMakeLists.txt  main.cpp
examples/throw-and-try/: CMakeLists.txt  main.cpp
examples/timed-msg/: CMakeLists.txt  main.cpp
examples/verify-numerics/: CMakeLists.txt  main.cpp
examples/zj-check/: main.cpp
libs/zj-all-headers/: CMakeLists.txt
libs/zj-all-headers/inc/: zj-debug.hpp  zj-log.hpp  zj-logging.hpp  zj-utility.hpp
libs/zj-all-headers/src/: zj-placeholder.cpp
libs/zj-basics/: CMakeLists.txt
libs/zj-basics/inc/: ZjBasicMacros.hpp  ZjChrono.hpp  ZjColors.hpp  ZjConcepts.hpp  ZjSingleton.hpp  zj-basic-macros.hpp  zj-chrono.hpp  zj-colors.hpp  zj-concepts.hpp  zj-singleton.hpp
libs/zj-basics/src/: ZjChrono.cpp  zj-chrono.cpp
libs/zj-debug/: CMakeLists.txt
libs/zj-debug-core/: CMakeLists.txt
libs/zj-debug-core/inc/: ZjCheckNumerics.hpp  ZjDebug.hpp  ZjExceptions.hpp  ZjLog.hpp  ZjLogAgents.hpp  ZjVerifyNumerics.hpp  zj-debug.hpp  zj-exceptions.hpp  zj-formatters.hpp  zj-logger.hpp  zj-logging-agents.hpp  zj-verify-numerics.hpp
libs/zj-debug-core/src/: ZjLog.cpp  zj-logger.cpp
libs/zj-debug-interface/: CMakeLists.txt
libs/zj-debug-interface/inc/: ZjLogMacroExtensions.hpp  ZjLogMacros.hpp
libs/zj-debug/inc/: ZjChrono.hpp  ZjDebug.hpp  ZjExceptions.hpp  ZjLog.hpp  ZjLogAgents.hpp  ZjLogMacros.hpp  ZjLogMacrosExtension.hpp  ZjLogsManager.hpp  zj-debug.hpp
libs/zj-debug/src/: ZjLog.cpp  ZjLogsManager.cpp
libs/zj-exception/: CMakeLists.txt
libs/zj-exception/inc/: ZjDebug.hpp  ZjExceptions.hpp  ZjLog.hpp  ZjLogAgent.hpp  ZjLogHelpers.hpp  ZjLogMacros.hpp  ZjTrial.hpp  ZjUtilityMacros.hpp
libs/zj-exception/src/: ZjDummy.cpp  ZjLog.cpp
libs/zj-exceptions/: CMakeLists.txt
libs/zj-exceptions/inc/: ZjAsserters.hpp  ZjColors.hpp  ZjExceptions.hpp  ZjLog.hpp  ZjSingleton.hpp  ZjThrow.hpp  ZjTypeFinders.hpp
libs/zj-exceptions/src/: ZjLog.cpp
libs/zj-log-interface/inc/: ZjLogMacroExtensions.hpp  ZjLogMacros.hpp  zj-logging-macros-simplified.hpp  zj-logging-macros.hpp
libs/zj-log-interface/src/: ZjPlaceholder.cpp
libs/zj-utility/: CMakeLists.txt
libs/zj-utility/inc/: ZjChrono.hpp  ZjColors.hpp  ZjConcepts.hpp  ZjCsvDynamicLog.hpp  ZjCsvLog.hpp  ZjCsvLogDynamic.hpp  ZjProgramSwitch.hpp  ZjSwitch.hpp  ZjTimeNow.hpp  ZjTimer.hpp  ZjTypeFinders.hpp  ZjUtility.hpp  zj-csv-logger.hpp  zj-debug.hpp  zj-program-switch.hpp  zj-timer.hpp  zj-utility.hpp
libs/zj-utility/src/: ZjChrono.cpp  ZjCsvDynamicLog.cpp  ZjCsvLog.cpp  ZjCsvLogDynamic.cpp  ZjPlaceHolder.cpp  ZjProgramSwitch.cpp  ZjSwitch.cpp  ZjTimeNow.cpp  ZjTimer.cpp  zj-csv-logger.cpp  zj-program-switch.cpp  zj-timer.cpp
references/test/: CMakeLists.txt  main.cpp
references/test-zj-try-2/: main.cpp
references/test-zj-try-3/: main.cpp
scripts/: zj-build-install-example.bash  zj-build-test-pkg.bash  zj-code-coverage-after-build.bash  zj-code-coverage.bash  zj-doxygen.bash  zj-install-deps.bash  zj-install-pkg-example.bash  zj-package-dependencies.bash
tests/: test-zj-basics.cpp  test-zj-program-switch.cpp  test-zj-singleton.cpp  test-zj-timer.cpp  test-zj-utility.cpp  testZjBasics.cpp  testZjDebug.cpp  testZjProgramSwitch.cpp  testZjSingleton.cpp  testZjSwitch.cpp  testZjTimer.cpp  testZjUtility.cpp
tests/test-zj-csv-log/: CMakeLists.txt  main.cpp
tests/test-zj-debug-log/: CMakeLists.txt  main.cpp
tests/test-zj-verify-numerics/: CMakeLists.txt  main.cpp
